--- a/mbeerti/package.json
+++ b/mbeerti/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "framer-motion": "^10.16.16",
+    "gtag": "^1.0.1",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18"
